--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -27,6 +27,16 @@
   /*%gradientBackground end*/ 
 }
 
+.square {
+  width: 83px;
+  height: 83px;
+  margin: 3rem;
+  border-top: 6px solid #cc925e;
+  border-right: 6px solid #cc925e;
+  border-bottom: 6px solid #fae5a9;
+  border-left: 6px solid #fae5a9;
+}
+
 .main {
   display: flex;
   flex-direction: column;
