--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -44,5 +44,8 @@
   align-items: center;
   padding: 6rem;
   min-height: 100vh;
+
+  font-family: Tahoma, Verdana, sans-serif;
+  color: #221123;
 }
 
