--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,6 +77,8 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  scrollbar-width: thin;
+  scrollbar-color: #D57405 #B9A78A;
 }
 
 html,
@@ -104,6 +106,34 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+/* Chrome, Edge and Safari */
+::-webkit-scrollbar {
+  height: 10px;
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  border-radius: 0px;
+
+  box-shadow: 1px 1px 0px 6px rgba(204,146,94,1) inset;
+  -webkit-box-shadow: 1px 1px 0px 6px rgba(204,146,94,1) inset;
+  -moz-box-shadow: 1px 1px 0px 6px rgba(204,146,94,1) inset;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 0px;
+  background-color: #D57405;
+  border: 2px outset #AD6865;
+  height: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #B95908;
+}
+
+::-webkit-scrollbar-thumb:active {
+  background-color: #B95908;
 }
 
 
