--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -95,6 +95,8 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+    background-image: url('./background.png'); /* Reemplaza 'ruta/de/la/imagen.jpg' con la ruta de tu imagen */
+    background-size: 100% 100%;
 }
 
 a {
