--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -43,7 +43,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
+  padding:  0 6rem 6rem 6rem;
   min-height: 100vh;
 
   font-family: Tahoma, Verdana, sans-serif;
