--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -95,7 +95,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-    background-image: url('./background.png'); /* Reemplaza 'ruta/de/la/imagen.jpg' con la ruta de tu imagen */
+    background-image: url('./background.png');
     background-size: 100% 100%;
 }
 
