authors page complete

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -50,3 +50,14 @@
   color: #221123;
 }
 
+.rowAuthors {
+  display: flex;
+  margin: 3rem 3rem 2rem 3rem;
+}
+
+.textAuthor {
+  margin-left: 1rem;
+  color: #853604;
+  font-family: 'Gill Sans', sans-serif;
+  font-size: x-large;
+}
