create square item

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -29,6 +29,9 @@
 }
 
 .square {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 83px;
   height: 83px;
   margin: 3rem;
