--- a/src/app/styles/Layout.module.scss
+++ b/src/app/styles/Layout.module.scss
@@ -28,6 +28,105 @@
 
     }
   }
-  .cursorPointer{
-    cursor: pointer;
+.cursorPointer{
+  cursor: pointer;
+}
+
+.frame {
+  width: 100%;
+  padding: 1rem;
+  border: 4px solid #853604;
+  background: #FC9403;
+
+  box-shadow: 1px -3px 0px 6px rgba(177,77,5,1) inset;
+  -webkit-box-shadow: 1px -3px 0px 6px rgba(177,77,5,1) inset;
+  -moz-box-shadow: 1px -3px 0px 6px rgba(177,77,5,1) inset;
+
+  &.fullScreen {
+    height: 60vh;
   }
+
+  &.toolTip {
+    min-width: 150px;
+    max-width: fit-content;
+    height: 70px;
+
+    padding: 0.5rem;
+    border: 2.5px solid #853604;
+    background: #FC9403;
+
+    box-shadow: .5px -1px 0px 4px rgba(177,77,5,1) inset;
+    -webkit-box-shadow: .5px -1px 0px 4px rgba(177,77,5,1) inset;
+    -moz-box-shadow: .5px -2px 0px 4px rgba(177,77,5,1) inset;
+  }
+}
+.base {
+  width: 100%;
+  overflow-y: auto;
+
+  /*%gradientBackground start*/ 
+  background: rgb(225,171,113);
+  background: linear-gradient(0deg, rgba(225,171,113,0.7) 0%, rgba(255,201,121,1) 100%);
+  background: -webkit-linear-gradient(0deg, rgba(225,171,113,0.7) 0%, rgba(255,201,121,1) 100%);
+  background: -moz-linear-gradient(0deg, rgba(225,171,113,0.7) 0%, rgba(255,201,121,1) 100%);
+
+  box-shadow: 1px 1px 0px 6px rgba(204,146,94,1) inset;
+  -webkit-box-shadow: 1px 1px 0px 6px rgba(204,146,94,1) inset;
+  -moz-box-shadow: 1px 1px 0px 6px rgba(204,146,94,1) inset;
+  /*%gradientBackground end*/
+
+  &.fullScreen {
+    height: 56vh;
+    border: 4px solid #853604;
+  }
+
+  &.toolTip {
+    display: flex;
+    align-items: center;
+    height: 97%;
+    border: 3px solid #853604;
+    padding: 0 10px;
+
+
+    box-shadow: 1px 1px 0px 4px rgba(204,146,94,1) inset;
+    -webkit-box-shadow: 1px 1px 0px 4px rgba(204,146,94,1) inset;
+    -moz-box-shadow: 1px 1px 0px 4px rgba(204,146,94,1) inset;
+  }
+}
+
+.square {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 83px;
+  height: 83px;
+  margin: 3rem;
+  border-top: 6px solid #cc925e;
+  border-right: 6px solid #cc925e;
+  border-bottom: 6px solid #fae5a9;
+  border-left: 6px solid #fae5a9;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding:  0 6rem 6rem 6rem;
+  min-height: 100vh;
+
+  font-family: Tahoma, Verdana, sans-serif;
+  color: #221123;
+}
+
+.rowAuthors {
+  display: flex;
+  margin: 3rem 3rem 2rem 3rem;
+}
+
+.textAuthor {
+  margin-left: 1rem;
+  color: #853604;
+  font-family: 'Gill Sans', sans-serif;
+  font-size: x-large;
+}
