--- a/src/app/styles/Layout.module.scss
+++ b/src/app/styles/Layout.module.scss
@@ -58,6 +58,10 @@
     box-shadow: .5px -1px 0px 4px rgba(177,77,5,1) inset;
     -webkit-box-shadow: .5px -1px 0px 4px rgba(177,77,5,1) inset;
     -moz-box-shadow: .5px -2px 0px 4px rgba(177,77,5,1) inset;
+    
+    position: absolute;
+    z-index: 1;
+  
   }
 }
 .base {
@@ -105,6 +109,15 @@
   border-right: 6px solid #cc925e;
   border-bottom: 6px solid #fae5a9;
   border-left: 6px solid #fae5a9;
+
+  position: relative;
+
+}
+
+.square:hover + .toolTip {
+  display: block;
+  top: 100%;
+  left: 0;
 }
 
 .main {
