--- a/src/app/styles/Layout.module.scss
+++ b/src/app/styles/Layout.module.scss
@@ -82,6 +82,10 @@
   &.fullScreen {
     height: 56vh;
     border: 4px solid #853604;
+    padding: 3rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(85px, 1fr));
+    gap: 10px; // Espacio entre elementos (ajusta según tu preferencia)
   }
 
   &.toolTip {
@@ -104,7 +108,6 @@
   justify-content: center;
   width: 83px;
   height: 83px;
-  margin: 3rem;
   border-top: 6px solid #cc925e;
   border-right: 6px solid #cc925e;
   border-bottom: 6px solid #fae5a9;
