--- a/src/app/styles/Layout.module.scss
+++ b/src/app/styles/Layout.module.scss
@@ -114,15 +114,15 @@
   border-bottom: 6px solid #fae5a9;
   border-left: 6px solid #fae5a9;
 
-  position: relative;
+  
 
 }
 
-.square:hover + .toolTip {
-  display: block;
-  top: 100%;
-  left: 0;
-}
+// .square:hover + .toolTip {
+//   display: block;
+//   top: 100%;
+//   left: 0;
+// }
 
 .main {
   display: flex;
