--- a/src/app/styles/Layout.module.scss
+++ b/src/app/styles/Layout.module.scss
@@ -48,8 +48,8 @@
 
   &.toolTip {
     min-width: 150px;
-    max-width: fit-content;
-    height: 70px;
+    max-width: 300px;
+    height: auto;
 
     padding: 0.5rem;
     border: 2.5px solid #853604;
@@ -91,10 +91,11 @@
 
   &.toolTip {
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
     height: 97%;
     border: 3px solid #853604;
-    padding: 0 10px;
+    padding: 10px;
 
 
     box-shadow: 1px 1px 0px 4px rgba(204,146,94,1) inset;
