change text color

--- a/src/app/styles/Layout.module.scss
+++ b/src/app/styles/Layout.module.scss
@@ -96,6 +96,7 @@
     height: 97%;
     border: 3px solid #853604;
     padding: 10px;
+    color: #853604;
 
 
     box-shadow: 1px 1px 0px 4px rgba(204,146,94,1) inset;
